# MyAgent-Community-Edition

./: .dockerignore  .env.example  .env.production.example  .gitignore  AI_CONTEXT.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  FINAL_REPORT.md  LICENSE  Makefile  NEXT_STEPS.md  PROJECT_STATUS.md  README.md  RELEASE_CHECKLIST.md  RELEASE_NOTES.md  ROADMAP.md  SECURITY.md  docker-compose.production.yml  docker-compose.yml  railway.json  render.yaml
MyAgent-Engine/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt
MyAgent-Engine/agents/: __init__.py  base.py  conversational_agent.py
MyAgent-Engine/apps/: __init__.py
MyAgent-Engine/apps/backend/: __init__.py  main.py
MyAgent-Engine/core/: __init__.py  container.py
MyAgent-Engine/core/config/: __init__.py  settings.py
MyAgent-Engine/core/database/: __init__.py  session.py
MyAgent-Engine/core/exceptions/: base.py  (+1 more)
MyAgent-Engine/migrations/: env.py
MyAgent-Engine/models/: __init__.py  entities.py  schemas.py
MyAgent-Engine/repositories/: __init__.py  sql_repositories.py
MyAgent-Engine/services/: __init__.py  auth_service.py  chat_service.py
MyAgent-Engine/tests/: __init__.py  conftest.py  test_api_auth.py  test_api_chat.py  test_api_projects_knowledge.py  test_api_tools_providers.py  test_config.py  test_costs_parsers.py  test_foundations.py  test_memory.py  test_migrations.py  test_openapi_contract.py  test_provider.py  test_provider_http.py  test_rag.py  test_security.py  test_tools.py  test_v3_quality.py
(+105 files in other folders)
